<resources>
    <string name="app_name">VoiceRemind</string>
    <string name="screen_title">Голосовая напоминайка</string>
    <string name="settings_drawer_title">Разделы и настройки</string>
    <string name="settings_drawer_open">Открыть разделы и настройки</string>
    <string name="reminder_hint">Например: встретиться 15 апреля в 19:30 в ресторане</string>
    <string name="voice_button">Голос</string>
    <string name="photo_button">Фото</string>
    <string name="photo_source_title">Источник фото объявления</string>
    <string name="photo_source_camera">Сделать фото</string>
    <string name="photo_source_gallery">Выбрать из галереи</string>
    <string name="preview_button">Проверить</string>
    <string name="save_button">Сохранить</string>
    <string name="preview_empty">Здесь появится разбор напоминания.</string>
    <string name="preview_template">Событие: %1$s\nДата и время: %2$s %3$s\nМесто: %4$s\nДлительность: %5$s</string>
    <string name="default_time_note">(время не сказано, поставлено %1$s)</string>
    <string name="parse_failed_hint">Не удалось автоматически распознать дату. Откройте форму календаря и выберите дату вручную.</string>
    <string name="parse_failed_toast">Дата не распознана автоматически, открыл форму календаря для ручного выбора.</string>
    <string name="saved_successfully">Событие сохранено в календарь</string>
    <string name="saved_with_default_time">Событие сохранено, время по умолчанию %1$s</string>
    <string name="saved_event_preview">Сохранено: %1$s</string>
    <string name="save_failed">Не удалось сохранить событие</string>
    <string name="calendar_not_found">Не найден доступный календарь на устройстве</string>
    <string name="calendar_permission_denied">Нет доступа к календарю. Разрешите доступ в настройках.</string>
    <string name="voice_prompt">Говорите на любом языке: задача, дата и время</string>
    <string name="voice_not_supported">Голосовой ввод не поддерживается на этом устройстве</string>
    <string name="voice_input_failed">Не удалось получить голосовой текст</string>
    <string name="default_event_title">Напоминание</string>
    <string name="calendar_form_opened">Открыл системную форму события календаря.</string>
    <string name="location_not_specified">не указано</string>
    <string name="duration_minutes_template">%1$d мин</string>
    <string name="confirm_dialog_title">Проверьте перед сохранением</string>
    <string name="confirm_dialog_save">Сохранить</string>
    <string name="confirm_dialog_cancel">Отмена</string>
    <string name="confirm_title_label">Событие</string>
    <string name="confirm_date_label">Дата (дд.ММ.гггг)</string>
    <string name="confirm_time_label">Время (чч:мм)</string>
    <string name="confirm_duration_label">Длительность (минуты)</string>
    <string name="confirm_location_label">Место</string>
    <string name="confirm_date_error">Введите дату в формате дд.ММ.гггг</string>
    <string name="confirm_time_error">Введите время в формате чч:мм</string>
    <string name="confirm_duration_error">Введите длительность от 1 до 1440 минут</string>
    <string name="confirm_date_picker_action">Выбрать дату</string>
    <string name="confirm_time_picker_action">Выбрать время</string>
    <string name="save_snackbar_summary">Проверка: %1$s %2$s, %3$s, %4$d мин</string>
    <string name="save_snackbar_action">Подтвердить</string>
    <string name="edit_pending_button">Изменить черновик</string>
    <string name="clear_draft_button">Очистить черновик</string>
    <string name="draft_restored_message">Черновик восстановлен</string>
    <string name="draft_restored_clear_action">Очистить</string>
    <string name="draft_restored_edit_action">Редактировать</string>
    <string name="draft_cleared_message">Черновик очищен</string>
    <string name="draft_cleared_undo_action">Отменить</string>
    <string name="clear_draft_confirm_title">Очистить черновик?</string>
    <string name="clear_draft_confirm_message">Все несохраненные данные черновика будут удалены.</string>
    <string name="clear_draft_confirm_cancel">Отмена</string>
    <string name="clear_draft_confirm_action">Очистить</string>
    <string name="permissions_intro_title">Доступы для удобной работы</string>
    <string name="permissions_intro_message">Приложению нужен доступ к микрофону для голосового ввода и к календарю для сохранения напоминаний как событий.</string>
    <string name="permissions_intro_continue">Продолжить</string>
    <string name="permissions_intro_later">Позже</string>
    <string name="permissions_reminder_voice_title">Разрешить микрофон?</string>
    <string name="permissions_reminder_voice_message">Без доступа к микрофону голосовой ввод не будет работать.</string>
    <string name="permissions_reminder_calendar_title">Разрешить календарь?</string>
    <string name="permissions_reminder_calendar_message">Без доступа к календарю нельзя автоматически сохранять события.</string>
    <string name="permissions_reminder_continue">Разрешить</string>
    <string name="permissions_reminder_later">Позже</string>
    <string name="permissions_denied_microphone_settings_hint">Доступ к микрофону отклонен. Вы можете выдать его в настройках приложения.</string>
    <string name="permissions_denied_calendar_settings_hint">Доступ к календарю отклонен. Вы можете выдать его в настройках приложения.</string>
    <string name="permissions_denied_both_settings_hint">Доступ к микрофону и календарю отклонен. Вы можете выдать их в настройках приложения.</string>
    <string name="permissions_denied_microphone_permanent_settings_hint">Доступ к микрофону отключен навсегда. Включите его в настройках приложения.</string>
    <string name="permissions_denied_calendar_permanent_settings_hint">Доступ к календарю отключен навсегда. Включите его в настройках приложения.</string>
    <string name="permissions_denied_both_permanent_settings_hint">Доступ к микрофону и календарю отключен навсегда. Включите их в настройках приложения.</string>
    <string name="open_settings_action">Открыть настройки</string>
    <string name="permissions_retry_action">Повторить</string>
    <string name="permissions_permanent_dialog_title">Доступ отключен</string>
    <string name="permissions_permanent_dialog_cancel">Позже</string>
    <string name="permissions_status_granted">разрешен</string>
    <string name="permissions_status_denied">не разрешен</string>
    <string name="permissions_status_granted_marked">✓ разрешен</string>
    <string name="permissions_status_denied_marked">✕ не разрешен</string>
    <string name="permissions_status_microphone_template">Микрофон: %1$s</string>
    <string name="permissions_status_calendar_template">Календарь: %1$s</string>
    <string name="permissions_status_microphone_placeholder">Микрофон: -</string>
    <string name="permissions_status_calendar_placeholder">Календарь: -</string>
    <string name="permissions_mic_info_content_description">Зачем нужен доступ к микрофону</string>
    <string name="permissions_calendar_info_content_description">Зачем нужен доступ к календарю</string>
    <string name="permissions_mic_info_title">Доступ к микрофону</string>
    <string name="permissions_mic_info_message">Нужен для голосового ввода напоминаний без ручного набора текста.</string>
    <string name="permissions_calendar_info_title">Доступ к календарю</string>
    <string name="permissions_calendar_info_message">Нужен, чтобы сохранять напоминания как события в системном календаре.</string>
    <string name="permissions_info_dialog_ok">Понятно</string>
    <string name="permission_already_granted">Доступ уже разрешен</string>
    <string name="weather_channel_name">Погодные предупреждения</string>
    <string name="weather_channel_description">Предупреждения о погоде перед встречами</string>
    <string name="weather_alert_title">Sää-Varoitus: погодное предупреждение</string>
    <string name="weather_alert_body_template">%1$s. %2$s</string>
    <string name="weather_alert_snow_body">Похоже, будет сильный снег. Выходи на 15 минут раньше.</string>
    <string name="weather_alert_rain_body">Похоже, будет сильный ливень. Выходи на 15 минут раньше.</string>
    <string name="weather_default_location">Helsinki</string>
    <string name="weather_fallback_city_title">Город по умолчанию для погоды</string>
    <string name="weather_fallback_city_button">Изменить</string>
    <string name="weather_fallback_city_placeholder">Погода по умолчанию: -</string>
    <string name="weather_fallback_city_value">Погода по умолчанию: %1$s</string>
    <string name="weather_fallback_city_error">Введите минимум 2 символа</string>
    <string name="language_setting_button">Язык</string>
    <string name="language_setting_placeholder">Язык приложения: -</string>
    <string name="language_setting_value">Язык приложения: %1$s</string>
    <string name="language_dialog_title">Язык приложения</string>
    <string name="language_system">По умолчанию системы</string>
    <string name="language_english">English</string>
    <string name="language_ukrainian">Українська</string>
    <string name="default_reminder_time_button">Время</string>
    <string name="default_reminder_time_placeholder">Время напоминания по умолчанию: -</string>
    <string name="default_reminder_time_value">Время напоминания по умолчанию: %1$s</string>
    <string name="route_action">Как добраться?</string>
    <string name="route_snackbar_prompt">Построить маршрут до: %1$s</string>
    <string name="route_location_missing">Укажите место встречи, чтобы построить маршрут</string>
    <string name="route_no_app_found">Не найдено приложение для построения маршрута</string>
    <string name="store_geo_channel_name">Muista Pullo</string>
    <string name="store_geo_channel_description">Напоминания о бутылках и покупках рядом с магазином</string>
    <string name="store_geo_notification_title">Muista Pullo</string>
    <string name="store_geo_notification_body">Кстати, ты рядом с %1$s! Не забудь сдать бутылки из багажника.</string>
    <string name="store_geo_generic_place">торговым центром</string>
    <string name="store_geo_permission_required">Для Muista Pullo нужен доступ к геолокации</string>
    <string name="store_geo_geocode_failed">Не удалось определить координаты магазина</string>
    <string name="store_geo_register_failed">Не удалось включить гео-напоминание</string>
    <string name="store_geo_armed">Muista Pullo включен для: %1$s</string>
    <string name="message_channel_name">Напоминания о сообщениях</string>
    <string name="message_channel_description">Уведомления для отправки SMS или WhatsApp сообщений</string>
    <string name="message_notification_title">Пора отправить сообщение</string>
    <string name="message_notification_body">%1$s: %2$s</string>
    <string name="message_notification_body_no_recipient">Сообщение: %1$s</string>
    <string name="message_action_send">Отправить</string>
    <string name="message_no_app_found">Не найдено приложение для отправки сообщения</string>
    <string name="message_default_text">Я задержусь</string>
    <string name="message_reminder_title_generic">Отправить сообщение</string>
    <string name="message_reminder_title_with_recipient">Отправить сообщение: %1$s</string>
    <string name="medication_channel_name">Lääke-Muistutus</string>
    <string name="medication_channel_description">Напоминания о приеме лекарств и витаминов</string>
    <string name="medication_notification_title">Lääke-Muistutus: %1$s</string>
    <string name="medication_notification_body">Время принять лекарство. Нажмите «Принято», чтобы добавить запись в лог.</string>
    <string name="medication_action_taken">Принято</string>
    <string name="medication_taken_logged">Отмечено как принято</string>
    <string name="medication_default_title">Прием лекарства</string>
    <string name="medication_export_log_button">Экспорт лога для врача</string>
    <string name="medication_open_log_button">Открыть лог приема</string>
</resources>